<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hpabstCounters</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titleText">Counters</string>
    <string name="toCountersButton">To Counters</string>
    <string name="buttonView">View</string>
    <string name="buttonRemove">Remove Counter</string>
    <string name="defaultName">DefaultName</string>
    <string name="defaultCount">0</string>
    <string name="buttonRename">Rename</string>
    <string name="buttonReset">Reset</string>
    <string name="buttonPlusOne">+1</string>
    <string name="buttonStats">Statistics</string>
    <string name="menu_newCounter">Add New Counter</string>
    <string name="menu_sortCounters">Sort Counters</string>

</resources>
